# itmo_lab_5

./: .gitignore  Makefile  README.md  pyproject.toml  res.html
.github/actions/common-steps/: action.yml
.github/workflows/: homework.yml
artifacts/: difference.txt
src/: task_1.py  task_async.py  task_sync.py
